yyyy-mm-dd, Version 4.2.0
	* snmp plugin: Added the options `Scale' and `Shift' to Data-blocks to
	  correct the values returned by SNMP-agents.

yyyy-mm-dd, Version 4.1.2
	* apcups plugin: Fix reporting of the `load percent' data.
	* netlink plugin: Build issues under some older versions of the Linux
	  includes (i. e. Debian Sarge) have been fixed.

2007-09-12, Version 4.1.1
	* Build system: The detection of `libnetlink' has been improved.
	* collectd: The documentation has been fixed in numerous places.
	* exec plugin: Setting the group under which to run a program has been
	  fixed.
	* collectd: The `sstrerror' function was improved to work correctly
	  with the broken GNU version of `strerror_r'.
	* collectd: Write an error message to STDERR when loading of a plugin
	  fails.
	* apcups plugin: Fix the `types' used to submit the values: They still
	  has an `apcups_' prefix which doesn't work anymore.
	* rrdtool plugin: Create new RRD-files with the `begin' time set to
	  whatever the client thinks is `now'..

2007-09-01, Version 4.1.0
	* Build system: The build system has been changed to automatically
	  disable all plugins, which are missing dependencies. The dependency
	  checking has been removed from the plugins themselves to remove
	  redundancy.
	* Flexible interval: The interval of collected data is now sent along
	  with the data itself over the network, so that the interval-settings
	  of server and clients no longer needs to match.
	* netlink plugin: The new `netlink' plugin connects to the Linux
	  kernel using a netlink socket and uses it to query information about
	  interfaces, qdiscs and classes.
	* rrdtool plugin: The cache is now dumped to disk in an extra thread
	  to not block data collection.
	* snmp plugin: The new `snmp' plugin can read values from SNMP enabled
	  network devices, such as switches, routers, thermometers, rack
	  monitoring servers, etc. The collectd-snmp(5) manpage documents this
	  plugin.